--- a/views/login.ejs
+++ b/views/login.ejs
@@ -15,12 +15,30 @@
   -webkit-box-shadow: 0 0 0 30px white inset !important;
   background-color: inherit !important;
 }
-
+    body{
+        margin-top: 0px;
+        background: rgb(34,53,70);
+            background: linear-gradient(90deg, rgba(34,53,70,1) 20%, rgba(38,100,161,1) 57%, rgba(70,212,226,1) 99%);
+    }
+    /* .containe{
+        position: relative;
+    }
+    .bg-img{
+        margin: 0px;
+        position: absolute;
+        
+    } */
     </style>
 </head>
 <body>
-
-    <div class="containe mt-5">
+    <!-- <div class="bg-img"><img src="assets/images/Bg-image.jpg"></div> -->
+    <div class="logo">
+        <a href="/"><img src="/assets/images/Black_And_White_Modern_Theatre_Logo_2.png" alt="" class="logo-img"></a>
+        
+    </div>
+    <img src="https://stickerly.pstatic.net/sticker_pack/n74UuONJ73YXHDVwDymZoA/XYBFYV/18/914e81a6-5f91-4916-9692-f567b33c2b46.png" alt="" class="demon-slayer">
+    
+    <div class="login-page container-xxl">
         <div class="row justify-content-center mt-5">
             <div class="col-md-4 text-center mt-5">
                 <h3 class="fw-bold mt-3">Welcome Back 👋</h3>
@@ -28,19 +46,19 @@
                 
                 <form action="/login" method="post" class="mt-5">
                     <div class="form-floatin my-2">
-                        <input type="email" name="email" class="search-field" id="floatingInput" placeholder="name@example.com">
+                        <input type="email" name="email" class="search-field" id="floatingInput" placeholder="Enter Your Email">
                         
                     </div>
-                    <div class="form-floating my-2">
-                        <input type="password" name="password" class="search-field" id="floatingInput" placeholder="name@example.com">
+                    <div class="form-floating my-4">
+                        <input type="password" name="password" class="search-field" id="floatingInput" placeholder="Enter Your Password">
                         
                     </div>
-
-                      <button type="submit" class="btn btn-light text-dark py-3 px-3 py-2 mt-2" style="width:100%">Login Now</button>
+                    <button type="submit" class="btn btn-light text-dark py-3 px-3 py-2 mt-2" style="width:100%">Login Now</button>
                 </form>
             </div>
         </div>
     </div>
+        
 <script src="./script.js"></script>
 </body>
 </html>
