--- a/views/register.ejs
+++ b/views/register.ejs
@@ -6,27 +6,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/public/assets/css/home.css">
+    <style>
+        body{
+            background: rgb(34,53,70);
+            background: linear-gradient(90deg, rgba(34,53,70,1) 20%, rgba(38,100,161,1) 57%, rgba(70,212,226,1) 99%);
+            color: White;
+        }
+    </style>
 </head>
 <body>
-
+    <div class="logo">
+        <a href="home.html"><img src="/public/assets/images/Black_And_White_Modern_Theatre_Logo_2.png" alt="" class="logo-img"></a>
+        
+    </div>
+    <img src="https://fanart.tv/api/download.php?type=download&image=30268&section=3" alt="" class="demon-slayer">
+    
     <div class="container mt-5">
         <div class="row justify-content-center mt-5">
             <div class="col-md-4 text-center mt-5">
-                <h3 class="fw-bold mt-3">Start Managing your taks⚡️</h3>
-                <p>Create your free account at todoist!</p>
+                <h3 class="fw-bold mt-3 ">Join Us For The Best Content</h3>
+                <p>Create your free account at Dat.Mov!</p>
                 
-                <form action="/add-user" method="post" class="mt-5">
+                <form action="/add-user" method="post" class="mt-5 text-black">
                     <div class="form-floating my-2">
-                        <input type="text" name="name" class="form-control" id="floatingInput" placeholder="name@example.com">
+                        <input type="text" name="name" class="form-control" id="floatingInput" placeholder="Enter Your Name">
                         <label for="floatingInput">First Name</label>
                     </div>
                     <div class="form-floating my-2">
-                        <input type="email" name="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+                        <input type="email" name="email" class="form-control" id="floatingInput" placeholder="Enter Your Email">
                         <label for="floatingInput">Email Id</label>
                     </div>
                     <div class="form-floating my-2">
-                        <input type="password" name="password" class="form-control" id="floatingInput" placeholder="name@example.com">
+                        <input type="password" name="password" class="form-control" id="floatingInput" placeholder="Enter Your Password">
                         <label for="floatingInput">Password</label>
                     </div>
 
@@ -35,6 +47,7 @@
             </div>
         </div>
     </div>
+    
 <script src="./script.js"></script>
 </body>
 </html>
